# seguiment

./: .coverage  .gitignore  Pipfile  README.md  categories.csv  cli.py  funcions.py  main.py  prova.py  prova.xlsx  prova_2.py  prova_3.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  python-app.yml
dades/: alumnat.csv  dates.csv  registre.db
dinterficie/interficie_seguiment/: interficie_seguiment.pyproject  main.py  main.ui  mainwindow.py
docs/: manual.md
src/: .coverage  agents_bbdd.py  agents_gui.py  build.spec  build.txt  build_linux.spec  config.ini  formats.py  funcions.py  gui.py  main.py  main.spec  main_2i.py  model.py  proves.py  proves_importacio.py  requirements.txt  sonar-project.properties  views.py  widgets.py
src/agents/: agents_bbdd.py  agents_gui.py  formats.py
src/antics/: main.py  views.py
src/dades/: alumnat.csv  categories.csv  registre.db  registre2.db  registre_bis.db  registres3.db
src/gui/: widgets.py
src/icones/: aplicacio.icns
src/proves_dao/: ModelDao.py  comptable.py  servidor.py
src/tests/: .coverage  sqlite_OFUMFKWA.db  tests.db  tests.py
src/unittests/: tests.db  tests.py  tests_agents_gui.py
tests/: .coverage  __init__.py  tests.db  tests.py  tests_agents_gui.py  tests_bbdd.py
