[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Seguiment"
version = "0.0.1"
authors = [
  { name="Jordi Berbis", email="jberbis@xtec.cat" },
]
description = "Una eina per al seguiment d'alumnes a centre eudcatius"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: GNU General Public License v3 (GPLv3)"]

[project.urls]
"Homepage" = "https://github.com/jberbissbd/seguiment"
"Bug Tracker" = "https://github.com/jberbissbd/seguiment/issues"