[build-system]
requires = ["setuptools>=61.0","PySide6>=6.3.1","python-dateutil>=2.8.2","numpy>=1.23.1","pandas>=1.4.3","Faker>=14.0.0","openpyxl>=3.0.10"]
build-backend = "setuptools.build_meta"

[project]
name = "tutopy"
version = "0.0.1"
authors = [
  { name="Jordi Berbis", email="jberbis@xtec.cat" },
]
description = "Una eina per al seguiment d'alumnes a centre eudcatius"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: GNU General Public License v3 (GPLv3)"]

[project.urls]
"Homepage" = "https://github.com/jberbissbd/seguiment"
"Bug Tracker" = "https://github.com/jberbissbd/seguiment/issues"

[pytest]
testpaths = 'tests'
